[gd_scene load_steps=6 format=2]

[ext_resource path="res://recursos/escenas/prefabs/objetos/DisparoMonstruo.gd" type="Script" id=1]
[ext_resource path="res://recursos/graficos/efectos/spritesheet_explosion.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.51127

[sub_resource type="Animation" id=2]
resource_name = "explotar"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="DisparoMonstruo" type="Area2D"]
z_index = 15
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )
velocidad = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "volando"
anims/explotar = SubResource( 2 )
anims/volando = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_DisparoMonstruo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_DisparoMonstruo_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
